<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/list_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@android:id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <FrameLayout
                    android:id="@+id/empty_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="18sp"
                        android:text="@string/empty_text"/>

                </FrameLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/first_step_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_delete_sweep_twotone_128dp"/>

                <TextView
                    android:id="@+id/first_step_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="300dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:gravity="start"
                    tools:text="@string/first_step_tips"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center_horizontal">

                <ProgressBar
                    style="@android:style/Widget.Material.ProgressBar.Horizontal"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"/>

                <TextView
                    android:id="@+id/progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    tools:text="@string/progress_text_scanning"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/material_grey_50"
            android:elevation="6dp">

            <TextView
                android:id="@+id/action_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:drawableTint="?android:attr/colorAccent"
                android:textColor="?android:attr/colorAccent"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_image_search_twotone_24dp"
                android:gravity="center_vertical"
                android:text="@string/action_scan"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/action_reset"
                android:tooltipText="@string/action_reset"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_refresh_24dp"
                android:visibility="gone"
                tools:visibility="visible"
                tools:ignore="UnusedAttribute" />

            <ImageView
                android:id="@+id/help_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:layout_margin="12dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/action_help"
                android:tooltipText="@string/action_help"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_help_twotone_24dp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_grey_50"
        android:alpha="0.9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_height"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="monospace"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/app_name_en"/>

    </FrameLayout>

</FrameLayout>